Fix 'sign in' link would show up on landing on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,6 +49,11 @@ nav .alert {
   .navbar-header {
     display: none;
   }
+
+  .navbar-collapse {
+    display: block;
+    visibility: visible;
+  }
 }
 
 .simple_form {
